@@ -13,7 +13,7 @@ class PostsController < BaseController
                            
   before_filter :login_required, :only => [:new, :edit, :update, :destroy, :create, :manage]
   before_filter :find_user, :only => [:new, :edit, :index, :show, :update_views, :manage]
-  before_filter :require_ownership_or_moderator, :only => [:create, :edit, :update, :destroy, :manage]
+  before_filter :require_ownership_or_moderator, :only => [:edit, :update, :destroy, :create, :manage, :new]
 
   skip_before_filter :verify_authenticity_token, :only => [:update_views, :send_to_friend] #called from ajax on cached pages 
   
@@ -241,8 +241,9 @@ class PostsController < BaseController
   private
   
   def require_ownership_or_moderator
-    @user ||= User.find(params[:user_id] || params[:id] )
-    unless admin? || moderator? || (@user && (@user.eql?(current_user)))
+    @user ||= User.find(params[:user_id])
+    @post ||= Post.find(params[:id]) if params[:id]
+    unless admin? || moderator? || (@post && (@post.user.eql?(current_user))) || (!@post && @user && @user.eql?(current_user))
       redirect_to :controller => 'sessions', :action => 'new' and return false
     end
     return @user
